Support running the build using JDK 16+